--- a/react/index.html
+++ b/react/index.html
@@ -24,7 +24,7 @@
         <!-- Add your site or application content here -->
         <nav>
           <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Holy Shit It Worked</a>
+            <a href="#" class="brand-logo">My ENIS!</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
               <li><a href="sass.html">Sass</a></li>
               <li><a href="badges.html">Components</a></li>
