--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -10,6 +10,7 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <base href="/"> <!-- angular router -->
     </head>
     <body>
         <!--[if lt IE 8]>
